# phone-metrics

./: LICENSE  pyproject.toml
phone_metrics/: __init__.py  datasets.py  oracle.py  recognition.py  segmentation.py  timit.py
tests/: test_oracle.py  test_recognition.py  test_timit.py
